# ai-rchivist

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  airchivist.py  checkpointing.py  compose.yaml  containerized.bat  document.txt  medium-model-response.json  medium-model-state.json  model.py  prompt.txt  requirements.txt  response.json  response2.json  run.bat  run.sh
backend/: .gitignore  Dockerfile  README.md  mypy.ini  pyproject.toml  requirements.txt  ruff.toml
backend/src/: backend.py  model.py
backend/src/airchivist/: __init__.py  backend.py  model.py  prompt.py  prompt.txt
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: app_state.js  app_state.module.css  error_box.js  please_wait.js  please_wait.module.css  waiting_dots.js  waiting_dots.module.css
frontend/src/routes/: app_with_id.js  pick_random_unvalidated.js
llm/: .gitignore
llm/ollama/: README.md
prepa-db/: create_tables.sql  grep_logs.py  hf_utils.py  prepa-db.ipynb  ruff.toml
prepa-db/code/: __main__.py  model.py
prepa-db/generated_texts/llama3.1-8b/: pardons_000.txt  pardons_001.txt  pardons_002.txt  pardons_003.txt  pardons_004.txt  pardons_005.txt  pardons_006.txt  pardons_007.txt  pardons_008.txt  pardons_009.txt  pardons_010.txt  pardons_011.txt  pardons_012.txt  pardons_013.txt  pardons_014.txt  pardons_015.txt  pardons_016.txt  pardons_017.txt  pardons_018.txt  pardons_019.txt  pardons_020.txt  pardons_021.txt  pardons_022.txt  pardons_023.txt  pardons_024.txt  pardons_025.txt  pardons_026.txt  pardons_027.txt  pardons_028.txt  pardons_029.txt  pardons_030.txt  pardons_031.txt  pardons_032.txt  pardons_033.txt  pardons_034.txt  pardons_035.txt  pardons_036.txt  pardons_037.txt  pardons_038.txt  pardons_039.txt  (+379 more)
prepa-db/generated_texts/mistral-7b/: pardons_000.txt  pardons_001.txt  pardons_002.txt  pardons_003.txt  pardons_004.txt  pardons_005.txt  pardons_006.txt  pardons_007.txt  pardons_008.txt  pardons_009.txt  pardons_010.txt  pardons_011.txt  pardons_012.txt  pardons_013.txt  pardons_014.txt  pardons_015.txt  pardons_016.txt  pardons_017.txt  pardons_018.txt  pardons_019.txt  pardons_020.txt  pardons_021.txt  pardons_022.txt  pardons_023.txt  pardons_024.txt  pardons_025.txt  pardons_026.txt  pardons_027.txt  pardons_028.txt  pardons_029.txt  pardons_030.txt  pardons_031.txt  pardons_032.txt  pardons_033.txt  pardons_034.txt  pardons_035.txt  pardons_036.txt  pardons_037.txt  pardons_038.txt  pardons_039.txt  (+378 more)
prepa-db/generated_texts/mistral-nemo/: pardons_000.txt  pardons_001.txt  pardons_002.txt  pardons_003.txt  pardons_004.txt  pardons_005.txt  pardons_006.txt  pardons_007.txt  pardons_008.txt  pardons_009.txt  pardons_010.txt  pardons_011.txt  pardons_012.txt  pardons_013.txt  pardons_014.txt  pardons_015.txt  pardons_016.txt  pardons_017.txt  pardons_018.txt  pardons_019.txt  pardons_020.txt  pardons_021.txt  pardons_022.txt  pardons_023.txt  pardons_024.txt  pardons_025.txt  pardons_026.txt  pardons_027.txt  pardons_028.txt  pardons_029.txt  pardons_030.txt  pardons_031.txt  pardons_032.txt  pardons_033.txt  pardons_034.txt  pardons_035.txt  pardons_036.txt  pardons_037.txt  pardons_038.txt  pardons_039.txt  (+379 more)
prepa-db/rsp_txt/: 000.txt  001.txt  002.txt  003.txt  004.txt  005.txt  006.txt  007.txt  008.txt  009.txt  010.txt  011.txt  012.txt  013.txt  014.txt  015.txt  016.txt  017.txt  018.txt  019.txt  020.txt  021.txt  022.txt  023.txt  024.txt  025.txt  026.txt  027.txt  028.txt  029.txt  030.txt  031.txt  032.txt  033.txt  034.txt  035.txt  036.txt  037.txt  038.txt  039.txt  (+360 more)
src/: errors.rs  main.rs  model.rs
static/: ai-rchivist.css  ai-rchivist.js  machine_in_the_loop.css  machine_in_the_loop.js
templates/: fallback.html  index.html
(+21 files in other folders)
