[package]
name = "ai-rchivist"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow      = "1.0.83"
thiserror   = "1.0.60"
serde       = {version = "1.0.201", features = ["derive"] }
tokio       = {version = "1.37.0",  features = ["rt-multi-thread"] }
axum        = {version = "0.7.5" }
askama      = {version = "0.12.1",  features = ["with-axum", "serde-json"] }
askama_axum = {version = "0.4.0",   features = ["serde-json"] }
tower-http  = {version = "0.5.2", features = ["fs"] }
serde_json =  {version = "1.0.117"}
dotenv = "0.15.0"
mistralai-client = "0.9.0"