[project]
name            = "airchivist"
description     = "AI-rchivist backend"
version         = "0.1.0"
authors         = [ {name = "Xavier GILLARD", email = "xaviergillard@gmail.com"} ]
requires-python = ">=3.10,<3.12"

############################ BUILD #####################################
[build-system]
requires               = ["poetry-core>=1.0.0,<3.0.0"]
build-backend          = "poetry.core.masonry.api"

############################ MYPY ####################################
[tool.poetry]
name                   = "airchivist"
description            = "AI-rchivist backend"
version                = "0.1.0"
authors                = [ "Xavier GILLARD" ]
packages               = [ {include = "airchivist", from = "src"} ]

[tool.poetry.dependencies]
python                 = ">=3.10,<3.12"
fastapi                = { version="~0", extras=["standard"] }
langchain              = "~0"
langchain-ollama       = "~0"
pydantic               = "^2.11"

############################ RUFF ####################################
[tool.ruff]
# global built-in configuration
fix                    = false
show-fixes             = true
line-length            = 88
indent-width           = 4
exclude                = [".venv"]
# how ruff is going to format code
[tool.ruff.format]
quote-style            = "double"
indent-style           = "space"
line-ending            = "cr-lf"
docstring-code-format  = true
# what kind of lints is it going to apply
[tool.ruff.lint]
select                 = ["ALL"]
[tool.ruff.pycodestyle]
max-line-length        = 120

############################ MYPY ####################################
[tool.mypy]
ignore_missing_imports = true
check_untyped_defs     = true